5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1756_1583.log
== SUBMITION (2019-05-28 22:54:32) 
-- CODE:
from numpy import*
valor_m = int(input("Digite um valor em metros: ")) #se for 2.x deve ser raw_input ao invés de input


resultado = '{0:,}'.format(valor_m).replace(',','.') #Aqui coloca os pontos
print (resultado)



-- EXECUTION TIME:
0.39802
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 08:57:23) 
-- CODE:
from numpy import*
valor_m = int(input("Digite um valor em metros: ")) #se for 2.x deve ser raw_input ao invés de input


resultado = '{-1:,}'.format(valor_m).replace(',','.') #Aqui coloca os pontos
print (resultado)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 08:57:27) 
-- CODE:
from numpy import*
valor_m = int(input("Digite um valor em metros: ")) #se for 2.x deve ser raw_input ao invés de input


resultado = '{-1:,}'.format(valor_m).replace(',','.') #Aqui coloca os pontos
print (resultado)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 08:58:17) 
-- CODE:
from numpy import*
valor_m = int(input("Digite um valor: ")) #se for 2.x deve ser raw_input ao invés de input


resultado = '{-1:,}'.format(valor_m).replace(',','.') #Aqui coloca os pontos
print (resultado)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 08:59:09) 
-- CODE:
from numpy import*
valor_m = int(input("Digite um valor: ")) #se for 2.x deve ser raw_input ao invés de input


resultado = .format(valor_m).replace(',','.') #Aqui coloca os pontos
print (resultado)



-- ERROR:
File "XXXX", line 5
    resultado = .format(valor_m).replace(',','.') #Aqui coloca os pontos
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 08:59:23) 
-- CODE:
from numpy import*
valor_m = int(input("Digite um valor: ")) #se for 2.x deve ser raw_input ao invés de input


resultado = '{0:,}'.format(valor_m) #Aqui coloca os pontos
print (resultado)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 08:59:58) 
-- CODE:
from numpy import*
valor_m = int(input("Digite um valor: ")) #se for 2.x deve ser raw_input ao invés de input


resultado = '{0:.}'.format(valor_m) #Aqui coloca os pontos
print (resultado)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:00:35) 
-- CODE:
from numpy import*
valor_m = int(input("Digite um valor: ")) #se for 2.x deve ser raw_input ao invés de input


resultado = '{0:2,}'.format(valor_m).replace(',','.') #Aqui coloca os pontos
print (resultado)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:01:09) 
-- CODE:
from numpy import*
valor_m = int(input("Digite um valor: ")) #se for 2.x deve ser raw_input ao invés de input


resultado = '{0:1}'.format(valor_m).replace(',','.') #Aqui coloca os pontos
print (resultado)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:01:15) 
-- CODE:
from numpy import*
valor_m = int(input("Digite um valor: ")) #se for 2.x deve ser raw_input ao invés de input


resultado = '{0:1}'.format(valor_m).replace(',','.') #Aqui coloca os pontos
print (resultado)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:02:00) 
-- CODE:
from numpy import*
valor_m = int(input("Digite um valor: ")) #se for 2.x deve ser raw_input ao invés de input


resultado = '{1:,}'.format(valor_m).replace(',','.') #Aqui coloca os pontos
print (resultado)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 09:02:34) 
-- CODE:
from numpy import*
valor_m = int(input("Digite um valor: ")) #se for 2.x deve ser raw_input ao invés de input


resultado = '{0:,}'.format(valor_m).replace(',','.') #Aqui coloca os pontos
print (resultado)



-- EXECUTION TIME:
5.41415
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:

-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:40:36) 
-- CODE:
from numpy import*
valor_m = int(input("Digite um valor: ")) #se for 2.x deve ser raw_input ao invés de input


resultado = '{0:,}'.format(valor_m).replace(',','.') #Aqui coloca os pontos
print (resultado)



-- EXECUTION TIME:
0.494138
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:40:37) 
-- CODE:
from numpy import*
valor_m = int(input("Digite um valor: ")) #se for 2.x deve ser raw_input ao invés de input


resultado = '{0:,}'.format(valor_m).replace(',','.') #Aqui coloca os pontos
print (resultado)



-- EXECUTION TIME:
0.514188
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:40:50) 
-- CODE:
from numpy import*
valor_m = int(input("Digite um valor: ")) #se for 2.x deve ser raw_input ao invés de input


resultado = '{0:,}'.format(valor_m).replace(',','.') #Aqui coloca os pontos
print (resultado)



-- EXECUTION TIME:
0.433636
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
